[gd_scene load_steps=3 format=3 uid="uid://b1t4pog2dnx58"]

[ext_resource type="Script" path="res://scenes/porte.gd" id="1_8ldg8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jpp6a"]
size = Vector2(32, 36)

[node name="Porte" type="Node2D"]
script = ExtResource("1_8ldg8")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jpp6a")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]

[node name="PorteOuverteTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="PorteOuverteTimer" to="." method="_on_porte_ouverte_timer_timeout"]
